src/objects/Finance_Detail__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Finance Details</relationshipLabel>
        <relationshipName>Finance_Details</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Bank_Account_Name__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Bank Account Name</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bank_Account_Number__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Bank Account Number</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bank_Id__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Bank Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bank_Identifier_Code__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Bank Identifier Code</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bank_Name__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Bank Name</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Branch_Name__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Branch Name</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CC_Address__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>CC Address</label>
        <referenceTo>Address__c</referenceTo>
        <relationshipLabel>Finance Details</relationshipLabel>
        <relationshipName>Finance_Details</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CC_CUR__c</fullName>
        <label>CC CUR</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>CC_Currency</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Card_Type__c</fullName>
        <label>Card Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>N/A</fullName>
                    <default>true</default>
                    <label>N/A</label>
                </value>
                <value>
                    <fullName>Visa</fullName>
                </value>
                <value>
                    <fullName>Mastercard</fullName>
                </value>
                <value>
                    <fullName>Amex</fullName>
                    <label>AMEX</label>
                </value>
                <value>
                    <fullName>American Express</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Expiry_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Expiry Date</label>
        <length>7</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Finance_Type__c</fullName>
        <label>Finance Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Credit Card</fullName>
                </value>
                <value>
                    <fullName>Debit Card</fullName>
                </value>
                <value>
                    <fullName>Transfer</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>InActive__c</fullName>
        <defaultValue>false</defaultValue>
        <label>InActive?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>International_Bank_Account_Number__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>International Bank Account Number</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_4_Digits__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Last 4 Digits</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_4_Digits_of_Token__c</fullName>
        <description>Last 4 Digits of the Token</description>
        <formula>RIGHT(Token__c, 4)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Last 4 Digits</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Name_on_Account__c</fullName>
        <description>Name on the Charge Card/Bank Account Holder Name</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Name on Account</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Primary__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Primary</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Token__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Card Token</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <label>Finance Detail</label>
    <nameField>
        <displayFormat>FD-{0000}</displayFormat>
        <label>Finance Detail Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Finance Details</pluralLabel>
    <recordTypes>
        <fullName>Bank</fullName>
        <active>true</active>
        <label>Bank</label>
    </recordTypes>
    <recordTypes>
        <fullName>Credit_Card</fullName>
        <active>true</active>
        <label>Credit Card</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>